@@ -2,8 +2,8 @@
 
 set -e
 
-export MAVEN_OPTS="$MAVEN_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
-export JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
+export MAVEN_OPTS="$MAVEN_OPTS -Xmx3072m"
+export JAVA_OPTS="$JAVA_OPTS -Xmx3072m"
 echo
 java -version
 echo
@@ -12,8 +12,8 @@ echo
 
 if test "$BUILDKITE_BRANCH" = "master"; then
     echo "BRANCH: MASTER"
-    ./mvnw clean deploy $1 -Djava.security.egd=file:/dev/./urandom
+    ./mvnw -s /etc/maven/settings.xml clean deploy $1 -Djava.security.egd=file:/dev/./urandom
 else
     echo "BRANCH: $CURRENT_BRANCH"
-    ./mvnw clean install $1 -Djava.security.egd=file:/dev/./urandom
+    ./mvnw -s /etc/maven/settings.xml clean install $1 -Djava.security.egd=file:/dev/./urandom
 fi
