@@ -2,8 +2,8 @@
 
 set -e
 
-export MAVEN_OPTS="$MAVEN_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
-export JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
+export MAVEN_OPTS="$MAVEN_OPTS -Xms8192m -Xmx8192m"
+export JAVA_OPTS="$JAVA_OPTS -Xms8192m -Xmx8192m"
 echo
 java -version
 echo
@@ -12,8 +12,11 @@ echo
 
 if test "$BUILDKITE_BRANCH" = "master"; then
     echo "BRANCH: MASTER"
-    ./mvnw clean install $1 -Djava.security.egd=file:/dev/./urandom
 else
     echo "BRANCH: $CURRENT_BRANCH"
-    ./mvnw clean install $1 -Djava.security.egd=file:/dev/./urandom
 fi
+
+echo "whoami: "
+whoami
+
+./mvnw -T 2C clean install $1 -Djava.security.egd=file:/dev/urandom -DskipAssembly=true
