@@ -2,9 +2,9 @@
 
 set -e
 
-export MAVEN_OPTS="$MAVEN_OPTS -XX:MaxPermSize=1024m -Xmx2048m -XX:+TieredCompilation -XX:TieredStopAtLevel=1"
-export JAVA_OPTS="$JAVA_OPTS -XX:MaxPermSize=1024m -Xmx2048m"
-export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
+export MAVEN_OPTS="$MAVEN_OPTS -Xms8192m -Xmx8192m"
+export JAVA_OPTS="$JAVA_OPTS -Xms8192m -Xmx8192m"
+export JAVA_HOME=`/usr/libexec/java_home -v 12`
 echo
 java -version
 echo
@@ -12,4 +12,4 @@ echo
 echo
 
 # to run from specific module use argument in quotes "-rf mockserver-war"
-./mvnw -T 1C clean install -offline $1 -Djava.security.egd=file:/dev/urandom -DskipAssembly=true
+./mvnw -T 3C clean install -offline $1 -Djava.security.egd=file:/dev/urandom -DskipAssembly=true
